force-app/main/default/objects/Opportunity/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <defaultValue>0</defaultValue>
    <description>ACV (annual contract value) is a metric that shows you how much an ongoing customer contract is worth by averaging and normalizing its value over one year.
ACV = Total contract value ÷ Number of years</description>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>