force-app/main/default/objects/Opportunity/fields/Legal_and_Infosec__c.field-meta.xml
<CustomField>
    <fullName>Legal_and_Infosec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal and Infosec</label>
    <type>Checkbox</type>
</CustomField>