force-app/main/default/objects/Opportunity/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <description>What is the source of this Opportunity</description>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Founder Referral</fullName>
            </value>
            <value>
                <fullName>Investor Referral</fullName>
            </value>
            <value>
                <fullName>Referral Programs</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>AE Prospecting</fullName>
            </value>
            <value>
                <fullName>SDR Prospecting</fullName>
            </value>
            <value>
                <fullName>Marketing/Demand Gen</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>