force-app/main/default/objects/Opportunity/fields/POC_Blocker__c.field-meta.xml
<CustomField>
    <fullName>POC_Blocker__c</fullName>
    <label>POC Blocker</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>