force-app/main/default/objects/Opportunity/fields/POC_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>POC_Complete_Date__c</fullName>
    <label>POC Complete Date</label>
    <type>Date</type>
</CustomField>