force-app/main/default/objects/Opportunity/fields/POC_Phases__c.field-meta.xml
<CustomField>
    <fullName>POC_Phases__c</fullName>
    <label>POC Phases</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-Pre-Demo</fullName>
                <default>true</default>
                <label>0-Pre-Demo</label>
            </value>
            <value>
                <fullName>1-Demo</fullName>
            </value>
            <value>
                <fullName>2-Identify Use Case/Requirements</fullName>
            </value>
            <value>
                <fullName>3-Planned</fullName>
            </value>
            <value>
                <fullName>4-In Progress</fullName>
            </value>
            <value>
                <fullName>5-Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>