force-app/main/default/objects/Opportunity/fields/POC_Requirements__c.field-meta.xml
<CustomField>
    <fullName>POC_Requirements__c</fullName>
    <label>POC Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>