force-app/main/default/objects/Opportunity/fields/Primary_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product__c</fullName>
    <label>Primary Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unified Insights</fullName>
            </value>
            <value>
                <fullName>Pipelines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>